[package]
name = "bevy_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
blenvy = { path = "../../crates/blenvy" }
#bevy_editor_pls = { version = "0.8" }
rand = "0.9.0"
json-writer ="0.4.0"

[dev-dependencies]
bevy-inspector-egui = { version = "0.29.1"}